assets/css/custom.css
#signupdiv > * {
	margin-bottom: 40px;
	width: 100%;
}

#signupdiv {
	display: flex;
	flex-direction: column;
	align-items: right;
	width: intrinsic;           /* Safari/WebKit uses a non-standard name */
	width: -moz-max-content;    /* Firefox/Gecko */
	width: -webkit-max-content; /* Chrome */
	display: table;
}

#signup-form > .message {
  margin: 0;
}

#mc_embed_signup input {
  display: inline;
}

#mc_embed_signup input.email {
  width: 62%;
}

@media (min-width: 980px) {
  #mc_embed_signup input.email {
    width: 59%;
  }
}

@media (min-width: 1280px) {
  #mc_embed_signup input.email {
    width: 62%;
  }
}

#signup-form > button,
#mc_embed_signup .button {
  font-size: 16px;
  height: 44px;
  width: 140px;
}

#signupdiv .rush-button {
  font-size: 16px;
}

button:hover,
.button:hover,
#mc_embed_signup .button:hover {
  color: #1cb495;
  background-color: #fff;
}

